Bug 1387285 - Release more member variable in HttpChannelChild on main thread. r=mayhemer, a=lizzard

After bug 1338493 landed, HttpChannelChild might be released on STS thread.
Redirected channel, intercept stream listener and context might not always be able to
release off-main-thread. Therefore, we need to proxy release these members on main thread.

MozReview-Commit-ID: 6mcja7WY1fK